# vibeformer

./: .gitmodules  README.md
digger-rl/: .gitignore  Makefile  README.md  analyze_ppo.py  digger_env.py  digger_vec_env.py  dreamer.py  eval_checkpoint.py  game_state.py  heuristic_agent.py  interaction-log.txt  probe_mps_sampling.py  probe_mps_skew_detail.py  probe_mps_vs_cpu.py  probe_state_minimal.py  probe_state_save.py  pyproject.toml  requirements.txt  run_dagger.py  run_digger.py  run_dreamer.py  run_ppo.py  setup.py  symbolic_env.py  tile_classifier.py  train_dagger.py  train_dagger_pixel.py  train_dqn.py  train_dreamer.py  train_dreamer_online.py  train_dreamer_symbolic.py  train_ppo.py  train_ppo_symbolic.py  train_symbolic.py
digger-rl/csrc/: libretro_frontend.cpp
digger-rl/papers/: README.md
digger-rl/tools/: analyze_ppo.py  dreamer.py  game_state.py  gen_heuristic_trace.py  gen_symbolic_trace.py  heuristic_agent.py  symbolic_env.py  tile_classifier.py
snake/: .gitignore  README.md  interaction-log.txt  nibbles_env.py  nibbles_sim.py  pyproject.toml  requirements.txt  tiny_snake.py  train_bc.py  train_ppo.py
snake/tools/: heuristic_agent.py  play_agent.py  play_human.py
sudoku-rl/: generate_sudoku.py  interaction-log.txt  rrn.py
sudoku-rl/papers/: README.md
transformer/: .gitignore  CLAUDE.md  benchmark.py  benchmark_ops.py  dataset.py  eval_val.py  experiment_bf16.py  expressivity_probe.py  generate.py  interaction-log.txt  model.py  requirements.txt  train.py
transformer/data/: build_vocab.py  fetch_russian_silver_age.py  tiny_balmont.txt  (+2 more)
